--- a/.github/workflows/deploy_to_uberspace.yml
+++ b/.github/workflows/deploy_to_uberspace.yml
@@ -1,6 +1,5 @@
-# This is a basic workflow to help you get started with Actions
-
-name: Deploy to Uberspace
+# This is a workflow to deploy the react code to GitHub Pages.
+name: Deploy to Uberspace via GitHub Pages
 
 # Controls when the action will run.
 on:
@@ -15,7 +14,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    name: Deploy to Uberspace
+    name: Build and Deploy
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -23,11 +22,29 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2-beta
+        with:
+          node-version: '12'
+          check-latest: true
+      - name: Install Dependencies
+        run: yarn
+      - name: Add gh-pages as a dev-dependency
+        run: yarn add --dev gh-pages
+      - name: Build ReactJS App
+        run: yarn build
+      - name: Deploy to GitHub Pages
+        uses: Cecilapp/GitHub-Pages-deploy@3.1.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          email: thomas.rosen@me.com
+          build_dir: build
+          cname: ""
       - name: run deploy commands on uberspace
         uses: garygrossgarten/github-action-ssh@release
         with:
           command: |
-            cd ~/edit.volt.link/ && git pull && yarn && supervisorctl restart edit_volt_link;
+            cd ~/edit.volt.link/ && git checkout gh-pages && git pull && supervisorctl restart edit_volt_link;
           host: maury.uberspace.de
           username: volteu
           password: ${{ secrets.UBERSPACE_PASSWORD_VOLTEU }}
