--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "intl-pluralrules": "^1.2.2",
     "iso-639-1": "^2.1.9",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
