--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@fluent/bundle": "^0.16.1",
     "@fluent/langneg": "^0.5.2",
     "@fluent/react": "^0.13.1",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
