--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-inlinesvg": "^2.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
