--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.4.11",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@fluent/bundle": "^0.16.1",
@@ -15,6 +16,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "graphql": "^15.5.3",
     "intl-pluralrules": "^1.2.2",
     "material-ui-popup-state": "^1.9.3",
     "react": "^17.0.2",
