--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "graphql": "^15.5.3",
     "intl-pluralrules": "^1.2.2",
     "material-ui-popup-state": "^1.9.3",
+    "notistack": "^1.0.10",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
