--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "caret-pos": "^2.0.0",
     "graphql": "^15.5.3",
     "intl-pluralrules": "^1.2.2",
     "material-ui-popup-state": "^1.9.3",
