--- a/.github/workflows/deploy_to_uberspace.yml
+++ b/.github/workflows/deploy_to_uberspace.yml
@@ -5,7 +5,7 @@ name: Deploy to Uberspace via GitHub Pages
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ "moving-to-graphql-and-blocks" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -40,11 +40,13 @@ jobs:
           email: thomas.rosen@me.com
           build_dir: build
           cname: ""
+          branch: beta_deploy
+          commit_message: beta.volt.link
       - name: run deploy commands on uberspace
         uses: garygrossgarten/github-action-ssh@release
         with:
           command: |
-            cd ~/edit.volt.link/ && git checkout gh-pages && git pull && supervisorctl restart edit_volt_link;
+            cd ~/beta.volt.link/ && git checkout beta_deploy && git pull && supervisorctl restart beta_volt_link;
           host: maury.uberspace.de
           username: volteu
           password: ${{ secrets.UBERSPACE_PASSWORD_VOLTEU }}
