started code highlighting in HtmlInput

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "^12.1.10",
     "caret-pos": "^2.0.0",
     "graphql": "^15.5.3",
+    "highlight.js": "^11.3.1",
     "intl-pluralrules": "^1.2.2",
     "material-ui-popup-state": "^1.9.3",
     "notistack": "^1.0.10",
