--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
+    "react-virtual-list": "^2.3.0",
     "twemoji": "^13.1.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
