--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdi/react": "^1.5.0",
     "@mui/icons-material": "^5.0.0-rc.1",
     "@mui/material": "^5.0.0-rc.1",
+    "@n8tb1t/use-scroll-position": "^2.0.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -35,6 +36,8 @@
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
     "react-virtual-list": "^2.3.0",
+    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-window": "^1.8.6",
     "twemoji": "^13.1.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
