move blocks by drag-n-droping them onto other blocks

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-virtual-list": "^2.3.0",
     "react-virtualized-auto-sizer": "^1.0.6",
     "react-window": "^1.8.6",
+    "transmat": "^0.2.1",
     "twemoji": "^13.1.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
