--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-inlinesvg": "^2.3.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
