use new deploy workflow

--- a/.github/workflows/deploy_to_uberspace.yml
+++ b/.github/workflows/deploy_to_uberspace.yml
@@ -40,12 +40,12 @@ jobs:
           email: thomas.rosen@me.com
           build_dir: build
           cname: ""
-          branch: beta_deploy
+          branch: deploy_frontend
       - name: run deploy commands on uberspace
         uses: garygrossgarten/github-action-ssh@release
         with:
           command: |
-            cd ~/beta.volt.link/ && git checkout beta_deploy && git pull && supervisorctl restart beta_volt_link;
+            cd ~/volt.link-frontend/ && git checkout deploy_frontend && git pull && supervisorctl restart volt_link_frontend;
           host: maury.uberspace.de
           username: volteu
           password: ${{ secrets.UBERSPACE_PASSWORD_VOLTEU }}
