--- a/.github/workflows/deploy_to_uberspace.yml
+++ b/.github/workflows/deploy_to_uberspace.yml
@@ -5,7 +5,7 @@ name: Deploy to Uberspace via GitHub Pages
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ "moving-to-graphql-and-blocks" ]
+    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
