--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "markdown-it-emoji": "^2.0.0",
     "markdown-it-kbd": "^2.2.2",
     "material-ui-popup-state": "^1.9.3",
+    "modernizr": "^3.12.0",
     "notistack": "^1.0.10",
     "react": "^18.0.0",
     "react-beautiful-dnd": "^13.1.0",
@@ -46,7 +47,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build_modernizr": "node build_modernizr.js",
+    "build": "yarn build_modernizr; react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "analyze": "source-map-explorer 'build/static/js/*.js'"
