PERFORMANCE use more cpus in libuv Thread Pool

--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build_modernizr": "node build_modernizr.js",
-    "build": "yarn build_modernizr; react-scripts build",
+    "start": "cpus=`node cpus.js`; UV_THREADPOOL_SIZE=$cpus react-scripts start",
+    "build_modernizr": "cpus=`node cpus.js`; UV_THREADPOOL_SIZE=$cpus node build_modernizr.js",
+    "build_react": "cpus=`node cpus.js`; UV_THREADPOOL_SIZE=$cpus react-scripts build",
+    "build": "yarn build_modernizr; yarn build_react",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "analyze": "source-map-explorer 'build/static/js/*.js'"
