--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "caret-pos": "^2.0.0",
+    "emoji-picker-react": "^3.5.1",
     "graphql": "^15.5.3",
     "highlight.js": "^11.3.1",
     "intl-pluralrules": "^1.2.2",
