--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.0.0-rc.1",
     "@mui/material": "^5.0.0-rc.1",
     "@n8tb1t/use-scroll-position": "^2.0.3",
+    "@react-hook/resize-observer": "^1.2.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -34,6 +35,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
+    "react-hotkeys-hook": "^3.4.6",
     "react-inlinesvg": "^2.3.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
