--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "markdown-it-emoji": "^2.0.0",
     "markdown-it-kbd": "^2.2.2",
     "material-ui-popup-state": "^1.9.3",
-    "math-expression-evaluator": "^1.3.14",
+    "mathjs": "^10.6.1",
     "modernizr": "^3.12.0",
     "notistack": "^1.0.10",
     "react": "^18.0.0",
