--- a/package.json
+++ b/package.json
@@ -53,9 +53,10 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "cpus=`node cpus.js`; echo $cpus; UV_THREADPOOL_SIZE=$cpus react-scripts start",
-    "build_modernizr": "cpus=`node cpus.js`; echo $cpus; UV_THREADPOOL_SIZE=$cpus node build_modernizr.js",
-    "build_react": "cpus=`node cpus.js`; echo $cpus; UV_THREADPOOL_SIZE=$cpus react-scripts build",
+    "start_with_all_cpus": "cpus=`node cpus.js`; UV_THREADPOOL_SIZE=$cpus react-scripts start",
+    "start": "react-scripts start",
+    "build_modernizr": "node build_modernizr.js",
+    "build_react": "react-scripts build",
     "build": "yarn build_modernizr; yarn build_react",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
